# WinG3D_Engine

./: .gitignore  CMakeLists.txt  README.md  defaults.ini  saved.ini
Assets/: GameLevel.txt
Assets/Models/: Barn.h2b  Barn.mtl  BigBarn.h2b  BigBarn.mtl  ChickenCoop.h2b  ChickenCoop.mtl  Cow.h2b  Cow.mtl  Fence.h2b  Fence.mtl  Fence2.h2b  Fence2.mtl  Ground.h2b  Ground.mtl  Horse.h2b  Horse.mtl  Llama.h2b  Llama.mtl  OpenBarn.h2b  OpenBarn.mtl  Pig.h2b  Pig.mtl  Pug.h2b  Pug.mtl  Sheep.h2b  Sheep.mtl  Silo.h2b  Silo.mtl  Silo_House.h2b  Silo_House.mtl  Spaceship4.h2b  Spaceship4.mtl  Torus.h2b  Torus.mtl  TowerWindmill.h2b  TowerWindmill.mtl  WaterTower.h2b  WaterTower.mtl  Well.h2b  Well.mtl  (+2 more)
Shaders/: PixelShader.hlsl  VertexShader.hlsl
Source/: Application.cpp  Application.h  GameConfig.h  Main.cpp  Precompiled.h
Source/Components/: Gameplay.h  Identification.h  Physics.h  Visuals.h
Source/Entities/: PlayerData.cpp  PlayerData.h  Prefabs.cpp  Prefabs.h
Source/Events/: Playevents.h
Source/Systems/: DirX12RendererLogic.cpp  DirX12RendererLogic.h  LevelLogic.cpp  LevelLogic.h  PhysicsLogic.cpp  PhysicsLogic.h
Source/Utils/: CameraMovement.h  h2bParser.h  lvlData.h
